# abizeitungsumfrage

./: .gitignore  Cargo.toml  README.md  api.md  config-example.toml  config.toml  diesel.toml  main.py  requirements.txt  run.sh
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  services.py
app/api/: dependencies.py  routes.py
bruno/: answer.bru  answer_post.bru  answers.bru  api.bru  api_post.bru  authed.bru  collection.bru  question.bru  questions.bru  student.bru  students.bru  teacher.bru  teachers.bru
migrations/2025-08-16-110648_create_students/: down.sql  up.sql
scripts/: liblog.sh  sendmails.py
src/: auth.rs  config.rs  database.rs  handlers.rs  main.rs  models.rs  schema.rs
src/entities/: answer.rs  mod.rs  prelude.rs  question.rs  student.rs  teacher.rs
src/migrator/: m20250925_0000001_students.rs  m20250925_0000002_teachers.rs  m20250925_0000003_questions.rs  m20250925_0000004_answers.rs  mod.rs
src/models/: answer.rs  mod.rs  question.rs  student.rs  teacher.rs
static/: abi_main.html  index.html  page.html  questions.html
static/css/: style.css
static/js/: script.js
