[package]
name = "abizeitungsumfrage"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.99"
csv = "1.3.1"
diesel = {version = "2.2.12", features = ["sqlite"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
sha256 = "1.6.0"
